--- a/rtx.conf
+++ b/rtx.conf
@@ -22,7 +22,7 @@ rtx.autoExposure.exposureWeightCurve1 = 0.241379
 rtx.autoExposure.exposureWeightCurve2 = 0.534483
 rtx.debugView.evMaxValue = 10
 rtx.isShaderExecutionReorderingSupported = False
-rtx.graphicsPreset = 4
+rtx.graphicsPreset = 0
 rtx.bloom.intensity = 0.057
 rtx.bloom.sigma = 0.019
 rtx.localtonemap.shadows = 0.06
@@ -37,13 +37,13 @@ rtx.effectLightIntensity = 0.24
 rtx.taauPreset = 0
 rtx.emissiveBlendOverrideEmissiveIntensity = 1.48
 rtx.emissiveIntensity = 9.1
-rtx.minReplacementTextureMipMapLevel = 1
 rtx.fusedWorldViewMode = 2
 rtx.enableFog = False
 rtx.ignoreGameDirectionalLights = True
 rtx.enableFogColorRemap = True
 rtx.enableFogMaxDistanceRemap = False
-rtx.enableUnorderedResolveInIndirectRays = False
+rtx.ignoreGamePointLights = True
+rtx.enableUnorderedEmissiveParticlesInIndirectRays = True
 rtx.enableVolumetricLighting = True
 rtx.uiTextures = 0x672FB8D0700A76F5, 0xC9AF798B10E8D7CD, 0x4C3BE22747A2F1CD, 0xECBA208D250C1A71, 0xF5C6F88CD9F6EC7E, 0x77F221A588069C7E, 0x6EA5154239D5AB7E, 0xEC90B644516E072E, 0x927393C80C32CBD8, 0xC3B54ABFC839F6AA, 0x38DD5D217E385157, 0x5702BFB13F78CC53, 0xD7AEF1014E1D5B43, 0x881D49383AE91503, 0x80DB5F3D878C7783, 0x55C474DB34EB512C, 0x9E24DDDC6D94CF85, 0xAC69946B2C28AB5D, 0x30E5E16CE748C0DD, 0x7859A136D11C8BDD, 0x3610952CE3A3BCE9, 0x24743E3FD036B6A9, 0xDCE6F45474954E9, 0x893C12EA796F8316, 0x22914EF34D58A4D6, 0x4051D4E9107808E8, 0x72AFCA6D02311BFB, 0x853B2A0C64C491F4, 0x17BD5D1EDF40C9B4, 0xDB4F50E696F87AC1, 0xF3A8A0133B72282F, 0x4AE133529E540282, 0xD25D4632D3A83742, 0x4C462427C0061E36, 0x6A14583BA759A3B3, 0x2A3609609A11215A, 0x99E698CF42CDAAE0, 0xDF59D5EDA11B48D9, 0xB0FD96A7B1AE69D9, 0x15E3E9874F608B8B, 0x2EAA996C6EC8ABAB, 0x38684F52347848EB, 0xC75FCAF78EBC6925, 0x1A63FC11DEFA6EBA, 0x7A451AA670ECE5A2, 0x4A3AAADF12019C09, 0x56AFAD0ABDFB0CC0, 0x230E7976D0518FED, 0x933C78D4C44383D0, 0xF967623125638BA3, 0xDAE87BEB61DF1161, 0x133D3D4103B9FC26, 0x8F1AEE95CADB5E, 0xC061849D5BA57F8E, 0x61DFAE9A222C66C7
 rtx.enableVolumetricsInPortals = False
@@ -52,7 +52,6 @@ rtx.fallbackLightMode = 0
 rtx.fallbackLightRadiance = 0.25, 0.25, 0.25
 rtx.fallbackLightType = 1
 rtx.playerModelTextures = 0xDF687DB4D3F12B0, 0xF4E9BD910297CEA
-rtx.ignoreGamePointLights = True
 rtx.ignoreGameSpotLights = True
 rtx.legacyMaterial.metallicConstant = 0
 rtx.tonemap.finalizeWithACES = True
