Start of compatibility changes
Making this way more modular and able to let people pick and chose lights if needed.

--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,12 @@
 /TRACKS
 /ZMenu
 /ZMenuAssets
+
 ## Remix Related
 /.trex/USD
 /rtx-remix/captures
 /rtx-remix/mods/gameReadyAssets/textures
+/rtx-remix/mods/gameReadyAssets/ExtMod
 
 # Filetypes
 *.exe
@@ -44,3 +46,4 @@ ZMenuU2.ini
 imgui.ini
 *.asi
 *.null
+*.dds
