--- a/rtx.conf
+++ b/rtx.conf
@@ -1,47 +1,44 @@
-rtx.autoExposure.evMinValue = -4.5
+rtx.autoExposure.evMinValue = -2.8
 rtx.playerModel.enablePrimaryShadows = False
 rtx.antiCulling.antiCullingTextures = 0x4CC785099F30CA92, 0xA4C98BC72626781A, 0x9F3620673B7F58A2, 0xD9A5CF0FB6507ED8, 0x8372729CF586C72B, 0x656B1D12E56C155B, 0x51B7F5072EB62215, 0xAA0FFA99C94BDAD, 0xE1E52428D518BAA5
-rtx.effectLightRadius = 2.59
+rtx.effectLightRadius = 2.55
 rtx.antiCulling.light.fovScale = 2
+rtx.playerModel.horizontalDetectionDistance = 33.46
+rtx.autoExposure.exposureWeightCurve0 = 0.12069
 rtx.antiCulling.light.numFramesToExtendLightLifetime = 600
 rtx.playerModel.enableVirtualInstances = False
-rtx.localtonemap.exposurePreferenceSigma = 0
 rtx.opaqueMaterial.thinFilmThicknessOverride = 943.5
 rtx.autoExposure.enabled = False
 rtx.localtonemap.boostLocalContrast = True
 rtx.instanceOverrideInstanceIdx = 2147483647
-rtx.autoExposure.autoExposureSpeed = 100
 rtx.autoExposure.centerMeteringSize = 0.67
-rtx.ignoreTextures = 0x4277BD4861FAF963, 0xBE58243B463A6723, 0x4D4D75DD6FF64E3, 0xBBE9B8B7DDD884DB, 0xF433E9B1C246D5D9, 0x81E7CB67B52E9099, 0xF97928EE10235021, 0x60D5D09018F4A618, 0x57A43CD661BE2058, 0x1C64F4CB53512FD6, 0xE475D40283D8C4B4, 0xF0933498F7A41E34, 0x58FE00B25D199355, 0x95A8D1957F22D9BB, 0xAA025D32C48753E4, 0xF7F975051E44ECC9, 0x4A8F323C18FF1E82, 0xAB73FF18B3B0CB7F, 0x339207AE6F5ABB80, 0xD25D42AAE3BE9BC0, 0xBEEBE7E783F122E7, 0xF57C7DFF0CBD9828, 0xE3FEECBEEADA0837, 0xDA944D610893F8CD, 0xAE620C6A038BCAE, 0xD6CBF472E436DE17, 0x506DAE321F702913, 0x3CBCBBDA33E1975F, 0x8FF983E4A6266D5C, 0xA5B7A6B24B11B4BE, 0xE1D7BD1801BFB4D2, 0x59DF3554520CC0F0, 0xF9BFB3E483D9B12B
-rtx.autoExposure.evMaxValue = 3
-rtx.playerModel.horizontalDetectionDistance = 33.46
-rtx.useWorldMatricesForShaders = False
-rtx.enableReplacementAssets = False
-rtx.autoExposure.exposureWeightCurve0 = 0.12069
 rtx.autoExposure.exposureWeightCurve1 = 0.241379
 rtx.autoExposure.exposureWeightCurve2 = 0.534483
 rtx.debugView.evMaxValue = 10
 rtx.isShaderExecutionReorderingSupported = False
-rtx.graphicsPreset = 0
+rtx.graphicsPreset = 1
 rtx.bloom.intensity = 0.057
 rtx.bloom.sigma = 0.019
-rtx.localtonemap.shadows = 0.06
+rtx.localtonemap.shadows = 0.25
 rtx.cutoutTextures = 0xFB709872990B59E0, 0x2CE2D8E9C5DCB455, 0x8F2DB2D985FF91B6
 rtx.debugView.displayType = 2
 rtx.particleTextures = 0xE7FD964DC278287C, 0xD405FFA4A2507154, 0xAF580CE24802AFD, 0x804BE93FB4E6ED0D, 0x746E7C1E593355E7, 0x70669E5ACFEB9E0B
 rtx.debugView.evMinValue = -12
 rtx.debugView.samplerType = 1
+rtx.denoiseDirectAndIndirectLightingSeparately = False
 rtx.dlssPreset = 2
 rtx.dynamicDecalTextures = 0x96B1339D2FF914B, 0xD447F4C61B12492F
-rtx.effectLightIntensity = 0.24
+rtx.effectLightIntensity = 0.31
 rtx.taauPreset = 0
 rtx.emissiveBlendOverrideEmissiveIntensity = 1.48
-rtx.emissiveIntensity = 9.1
+rtx.emissiveIntensity = 8.96
+rtx.minReplacementTextureMipMapLevel = 1
 rtx.fusedWorldViewMode = 2
 rtx.enableFog = False
 rtx.ignoreGameDirectionalLights = True
 rtx.enableFogColorRemap = True
 rtx.enableFogMaxDistanceRemap = False
+rtx.neeCache.enable = False
 rtx.ignoreGamePointLights = True
 rtx.enableUnorderedEmissiveParticlesInIndirectRays = True
 rtx.enableVolumetricLighting = True
@@ -53,18 +50,22 @@ rtx.fallbackLightRadiance = 0.25, 0.25, 0.25
 rtx.fallbackLightType = 1
 rtx.playerModelTextures = 0xDF687DB4D3F12B0, 0xF4E9BD910297CEA
 rtx.ignoreGameSpotLights = True
+rtx.ignoreTextures = 0x4277BD4861FAF963, 0xBE58243B463A6723, 0x4D4D75DD6FF64E3, 0xBBE9B8B7DDD884DB, 0xF433E9B1C246D5D9, 0x81E7CB67B52E9099, 0xF97928EE10235021, 0x60D5D09018F4A618, 0x57A43CD661BE2058, 0x1C64F4CB53512FD6, 0xE475D40283D8C4B4, 0xF0933498F7A41E34, 0x58FE00B25D199355, 0x95A8D1957F22D9BB, 0xAA025D32C48753E4, 0xF7F975051E44ECC9, 0x4A8F323C18FF1E82, 0xAB73FF18B3B0CB7F, 0x339207AE6F5ABB80, 0xD25D42AAE3BE9BC0, 0xBEEBE7E783F122E7, 0xF57C7DFF0CBD9828, 0xE3FEECBEEADA0837, 0xDA944D610893F8CD, 0xAE620C6A038BCAE, 0xD6CBF472E436DE17, 0x506DAE321F702913, 0x3CBCBBDA33E1975F, 0x8FF983E4A6266D5C, 0xA5B7A6B24B11B4BE, 0xE1D7BD1801BFB4D2, 0x59DF3554520CC0F0, 0xF9BFB3E483D9B12B
 rtx.legacyMaterial.metallicConstant = 0
 rtx.tonemap.finalizeWithACES = True
 rtx.legacyMaterial.roughnessConstant = 1
-rtx.localtonemap.highlights = 6.72
+rtx.postfx.blurDiameterFraction = 0.045
+rtx.localtonemap.exposure = 0.3
+rtx.localtonemap.highlights = -2.52
 rtx.nisPreset = 3
 rtx.zUp = True
 rtx.nonOffsetDecalTextures = 0xEFE242BC3FCA24B1
 rtx.opaqueMaterial.layeredWaterNormalEnable = False
+rtx.pathMaxBounces = 2
+rtx.pathMinBounces = 0
 rtx.playerModel.backwardOffset = 18.43
 rtx.playerModel.enableInPrimarySpace = True
 rtx.playerModel.verticalDetectionDistance = 61.92
-rtx.postfx.blurDiameterFraction = 0.045
 rtx.postfx.chromaticAberrationAmount = 0.69
 rtx.postfx.enableChromaticAberration = False
 rtx.postfx.enableMotionBlur = False
@@ -75,6 +76,7 @@ rtx.postfx.vignetteIntensity = 0.82
 rtx.postfx.vignetteRadius = 0.232
 rtx.postfx.vignetteSoftness = 0.215
 rtx.reflexMode = 2
+rtx.replaceDirectSpecularHitTWithIndirectSpecularHitT = False
 rtx.resolutionScale = 0.5
 rtx.sceneScale = 0.01
 rtx.showUICursor = False
@@ -87,6 +89,7 @@ rtx.translucentMaterial.normalIntensity = -0.108
 rtx.uniqueObjectDistance = 1000
 rtx.useVertexCapture = False
 rtx.useVertexCapturedNormals = False
+rtx.useWorldMatricesForShaders = False
 rtx.vertexColorStrength = 1
 rtx.viewDistance.distanceFadeMax = 67.7
 rtx.viewDistance.distanceFadeMin = 67.7
