Fort Union additions

--- a/rtx.conf
+++ b/rtx.conf
@@ -4,6 +4,8 @@ rtx.antiCulling.antiCullingTextures = 0x4CC785099F30CA92, 0xA4C98BC72626781A, 0x
 rtx.effectLightRadius = 2.55
 rtx.antiCulling.light.fovScale = 2
 rtx.playerModel.horizontalDetectionDistance = 33.46
+rtx.useWorldMatricesForShaders = False
+rtx.enableReplacementAssets = False
 rtx.autoExposure.exposureWeightCurve0 = 0.12069
 rtx.antiCulling.light.numFramesToExtendLightLifetime = 600
 rtx.playerModel.enableVirtualInstances = False
@@ -54,7 +56,6 @@ rtx.ignoreTextures = 0x4277BD4861FAF963, 0xBE58243B463A6723, 0x4D4D75DD6FF64E3, 
 rtx.legacyMaterial.metallicConstant = 0
 rtx.tonemap.finalizeWithACES = True
 rtx.legacyMaterial.roughnessConstant = 1
-rtx.postfx.blurDiameterFraction = 0.045
 rtx.localtonemap.exposure = 0.3
 rtx.localtonemap.highlights = -2.52
 rtx.nisPreset = 3
@@ -66,6 +67,7 @@ rtx.pathMinBounces = 0
 rtx.playerModel.backwardOffset = 18.43
 rtx.playerModel.enableInPrimarySpace = True
 rtx.playerModel.verticalDetectionDistance = 61.92
+rtx.postfx.blurDiameterFraction = 0.045
 rtx.postfx.chromaticAberrationAmount = 0.69
 rtx.postfx.enableChromaticAberration = False
 rtx.postfx.enableMotionBlur = False
@@ -89,7 +91,6 @@ rtx.translucentMaterial.normalIntensity = -0.108
 rtx.uniqueObjectDistance = 1000
 rtx.useVertexCapture = False
 rtx.useVertexCapturedNormals = False
-rtx.useWorldMatricesForShaders = False
 rtx.vertexColorStrength = 1
 rtx.viewDistance.distanceFadeMax = 67.7
 rtx.viewDistance.distanceFadeMin = 67.7
