--- a/.trex/bridge.conf
+++ b/.trex/bridge.conf
@@ -391,7 +391,7 @@
 
 # Supported values: True, False
 
- useSharedHeap = True
+# useSharedHeap = False
 
 
 # Shared heap usage policy. A comma-separated set of rules for enabling
@@ -455,10 +455,3 @@
 # Supported values: True, False
 
 # useShadowMemoryForDynamicBuffers = False
-
-# Enable/disable DirectInput message forwarding to Remix UI.
-# In some titles DirectInput messages may interfere with Windows input message causing Remix UI input to misbehave. If this happens in a game you are trying to remix, try to disable DirectInput message forwarding.
- client.DirectInput.forwardMessages = False
-# Enable/disable DirectInput exclusive input.
-# Only affects fullscreen modes. When Remix UI input misbehaves in fullscreen mode, try to disable DirectInput exclusive input.
-client.DirectInput.disableExclusiveInput = True
