--- a/rtx.conf
+++ b/rtx.conf
@@ -3,9 +3,9 @@ rtx.playerModel.enablePrimaryShadows = False
 rtx.antiCulling.antiCullingTextures = 0x4CC785099F30CA92, 0xA4C98BC72626781A, 0x9F3620673B7F58A2, 0xD9A5CF0FB6507ED8, 0x8372729CF586C72B, 0x656B1D12E56C155B, 0x51B7F5072EB62215, 0xAA0FFA99C94BDAD, 0xE1E52428D518BAA5
 rtx.effectLightRadius = 2.55
 rtx.antiCulling.light.fovScale = 2
-rtx.legacyMaterial.metallicConstant = 0
-rtx.antiCulling.light.enable = True
 rtx.playerModel.horizontalDetectionDistance = 33.46
+rtx.useWorldMatricesForShaders = False
+rtx.enableReplacementAssets = False
 rtx.autoExposure.exposureWeightCurve0 = 0.12069
 rtx.antiCulling.light.numFramesToExtendLightLifetime = 600
 rtx.playerModel.enableVirtualInstances = False
@@ -53,6 +53,7 @@ rtx.playerModelTextures = 0xDF687DB4D3F12B0, 0xF4E9BD910297CEA
 rtx.neeCache.enable = False
 rtx.ignoreGamePointLights = True
 rtx.ignoreTextures = 0x4277BD4861FAF963, 0xBE58243B463A6723, 0x4D4D75DD6FF64E3, 0xBBE9B8B7DDD884DB, 0xF433E9B1C246D5D9, 0x81E7CB67B52E9099, 0xF97928EE10235021, 0x60D5D09018F4A618, 0x57A43CD661BE2058, 0x1C64F4CB53512FD6, 0xE475D40283D8C4B4, 0xF0933498F7A41E34, 0x58FE00B25D199355, 0x95A8D1957F22D9BB, 0xAA025D32C48753E4, 0xF7F975051E44ECC9, 0x4A8F323C18FF1E82, 0xAB73FF18B3B0CB7F, 0x339207AE6F5ABB80, 0xD25D42AAE3BE9BC0, 0xBEEBE7E783F122E7, 0xF57C7DFF0CBD9828, 0xE3FEECBEEADA0837, 0xDA944D610893F8CD, 0xAE620C6A038BCAE, 0xD6CBF472E436DE17, 0x506DAE321F702913, 0x3CBCBBDA33E1975F, 0x8FF983E4A6266D5C, 0xA5B7A6B24B11B4BE, 0xE1D7BD1801BFB4D2, 0x59DF3554520CC0F0, 0xF9BFB3E483D9B12B
+rtx.legacyMaterial.metallicConstant = 0
 rtx.tonemap.finalizeWithACES = True
 rtx.legacyMaterial.roughnessConstant = 1
 rtx.localtonemap.highlights = -2.52
@@ -87,10 +88,8 @@ rtx.terrainTextures = 0x75AF16D8267C30CE
 rtx.tonemap.colorGradingEnabled = True
 rtx.translucentMaterial.normalIntensity = -0.108
 rtx.uniqueObjectDistance = 1000
-rtx.useDenoiserReferenceMode = True
 rtx.useVertexCapture = False
 rtx.useVertexCapturedNormals = False
-rtx.useWorldMatricesForShaders = False
 rtx.vertexColorStrength = 1
 rtx.viewDistance.distanceFadeMax = 67.7
 rtx.viewDistance.distanceFadeMin = 67.7
