--- a/rtx.conf
+++ b/rtx.conf
@@ -25,6 +25,7 @@ rtx.debugView.displayType = 2
 rtx.particleTextures = 0xE7FD964DC278287C, 0xD405FFA4A2507154, 0x2664B59FF5E4BFE5, 0xAF580CE24802AFD, 0x804BE93FB4E6ED0D, 0x746E7C1E593355E7, 0x70669E5ACFEB9E0B
 rtx.debugView.evMinValue = -12
 rtx.debugView.samplerType = 1
+rtx.dlssPreset = 2
 rtx.dynamicDecalTextures = 0x96B1339D2FF914B, 0xD447F4C61B12492F
 rtx.effectLightIntensity = 0.31
 rtx.taauPreset = 0
@@ -51,11 +52,10 @@ rtx.fallbackLightType = 1
 rtx.playerModelTextures = 0xDF687DB4D3F12B0, 0xF4E9BD910297CEA
 rtx.ignoreTextures = 0x4277BD4861FAF963, 0xBE58243B463A6723, 0x4D4D75DD6FF64E3, 0xBBE9B8B7DDD884DB, 0xF433E9B1C246D5D9, 0x81E7CB67B52E9099, 0xF97928EE10235021, 0x60D5D09018F4A618, 0x57A43CD661BE2058, 0x1C64F4CB53512FD6, 0xE475D40283D8C4B4, 0xF0933498F7A41E34, 0x58FE00B25D199355, 0x95A8D1957F22D9BB, 0xAA025D32C48753E4, 0xF7F975051E44ECC9, 0x4A8F323C18FF1E82, 0xAB73FF18B3B0CB7F, 0x339207AE6F5ABB80, 0xD25D42AAE3BE9BC0, 0xBEEBE7E783F122E7, 0xF57C7DFF0CBD9828, 0xE3FEECBEEADA0837, 0xDA944D610893F8CD, 0xAE620C6A038BCAE, 0xD6CBF472E436DE17, 0x506DAE321F702913, 0x3CBCBBDA33E1975F, 0x8FF983E4A6266D5C, 0xA5B7A6B24B11B4BE, 0xE1D7BD1801BFB4D2, 0x59DF3554520CC0F0, 0xF9BFB3E483D9B12B
 rtx.legacyMaterial.metallicConstant = 0
-rtx.postfx.motionBlurSampleCount = 8
 rtx.tonemap.finalizeWithACES = True
 rtx.legacyMaterial.roughnessConstant = 1
 rtx.localtonemap.highlights = -2.52
-rtx.nisPreset = 3
+rtx.nisPreset = 0
 rtx.zUp = True
 rtx.nonOffsetDecalTextures = 0xEFE242BC3FCA24B1
 rtx.opaqueMaterial.layeredWaterNormalEnable = False
@@ -66,9 +66,11 @@ rtx.postfx.blurDiameterFraction = 0.045
 rtx.postfx.chromaticAberrationAmount = 0.69
 rtx.postfx.enableChromaticAberration = False
 rtx.postfx.enableMotionBlur = False
+rtx.postfx.motionBlurSampleCount = 8
 rtx.postfx.vignetteIntensity = 0.82
 rtx.postfx.vignetteRadius = 0.232
 rtx.postfx.vignetteSoftness = 0.215
+rtx.qualityDLSS = 3
 rtx.resolutionScale = 0.5
 rtx.sceneScale = 0.01
 rtx.showUICursor = False
