--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ rtx-remix/mods/gameReadyAssets/extmod.usd
 rtx-remix/OV_U2.usd
 
 rtx-remix/.thumbs/
+
+rtx-remix/mods/gameReadyAssets/02_materials/
